Fix float notification text wrap

--- a/src/components/FloatNotification/styles.scss
+++ b/src/components/FloatNotification/styles.scss
@@ -72,7 +72,7 @@
 
     &__description {
       color: var(--sds-clr-gray-11);
-      word-break: break-all;
+      word-break: break-word;
     }
 
     &__actions {
